--- a/src/Youtube-UI.html
+++ b/src/Youtube-UI.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../dist/output.css" rel="stylesheet">
-  <link rel="stylesheet" href="input.css">
+  <link rel="stylesheet" href="">
 
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
@@ -16,7 +16,7 @@
 <body style="position: relative;">
 
   <!-- Youtube Navbar -->
-  <header class="fixed header w-full bg-white flex h-20 justify-between items-center my-0 px-4 flex-wrap">
+  <header class="sticky top-0 header w-full bg-white flex h-20 justify-between items-center my-0 px-4 flex-wrap">
     <!-- Logo -->
     <div class="flex justify-between items-center left-section" id="nav-1">
       <i class="material-icons">
@@ -59,10 +59,10 @@
   </header>
 
   <!-- Below Navbar Section -->
-  <section style="height: auto; position: relative; top: 11vh;">
+  <section style="height: auto;">
 
     <!-- Category Sidebar with 12vw -->
-    <aside style="position: fixed; top: 11vh;" class="left-categories">
+    <aside class="sticky top-20 left-categories">
       <div class="category py-4 px-6 flex items-center">
         <i class="material-icons mr-4">
           home
@@ -127,7 +127,7 @@
       <h1 class="mb-2 font-bold text-xl">Recommened</h1>
 
       <!-- Video area inner Boundary -->
-      <div class="flex flex-row flex-wrap justify-center gap-x-2 gap-y-8 video-boundary">
+      <div class="flex flex-row flex-wrap ml-auto gap-x-2 gap-y-8 video-boundary">
 
         <!-- Video Full section started -->
         <div class="inline-block video-sec w-74-4 h-auto">
