--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400&family=Kdam+Thmor+Pro&family=Roboto+Slab&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400&family=Kdam+Thmor+Pro&family=Roboto+Slab&display=swap"
     rel="stylesheet">
-    <style>
-      body{
-        font-family: 'Kdam Thmor Pro', sans-serif !important;
-      }
-    </style>
+  <style>
+    body {
+      font-family: 'Kdam Thmor Pro', sans-serif !important;
+    }
+  </style>
 </head>
 
 <body>
