--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/dist/output.css" rel="stylesheet">
-  <link rel="stylesheet" href="/src/input.css">
+  <link href="dist/output.css" rel="stylesheet">
+  <link rel="stylesheet" href="src/input.css">
 
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
@@ -24,6 +24,6 @@
 
 <body>
   <header class="header w-full bg-white flex h-20 justify-between items-center my-0 px-4 flex-wrap">
-    <a href="Youtube-UI.html">Youtube UI</a>
+    <a href="src/Youtube-UI.html">Youtube UI</a>
   </header>
 </body>
