--- a/index.html
+++ b/index.html
@@ -17,13 +17,93 @@
     rel="stylesheet">
   <style>
     body {
+      background-color: black !important;
       font-family: 'Kdam Thmor Pro', sans-serif !important;
+    }
+
+    /* === removing default button style ===*/
+    .button {
+      margin: 0;
+      height: auto;
+      background: transparent;
+      padding: 0;
+      border: none;
+      cursor: pointer;
+    }
+
+    /* button styling */
+    .button {
+      --border-right: 6px;
+      --text-stroke-color: rgba(255, 255, 255, 0.6);
+      --animation-color: #37FF8B;
+      --fs-size: 2em;
+      letter-spacing: 3px;
+      text-decoration: none;
+      font-size: var(--fs-size);
+      font-family: "Arial";
+      position: relative;
+      text-transform: uppercase;
+      color: transparent;
+      -webkit-text-stroke: 1px var(--text-stroke-color);
+    }
+
+    /* this is the text, when you hover on button */
+    .hover-text {
+      position: absolute;
+      box-sizing: border-box;
+      content: attr(data-text);
+      color: var(--animation-color);
+      width: 0%;
+      inset: 0;
+      border-right: var(--border-right) solid var(--animation-color);
+      overflow: hidden;
+      transition: 0.5s;
+      -webkit-text-stroke: 1px var(--animation-color);
+    }
+
+    /* hover */
+    .button:hover .hover-text {
+      width: 100% !important;
+      filter: drop-shadow(0 0 23px var(--animation-color))
+    }
+
+    .boxes {
+      border: 0.3em solid yellow;
+      border-radius: 6px !important;
+      margin: 2em !important;
+    }
+
+    .container {
+      display: flex;
+      justify-content: start;
+      align-items: start;
+      flex-flow: row wrap;
     }
   </style>
 </head>
 
 <body>
-  <header class="header w-full bg-white flex h-20 justify-between items-center my-0 px-4 flex-wrap">
-    <a href="src/Youtube-UI.html">Youtube UI</a>
-  </header>
+
+  <div class="container">
+
+    <!-- Buttons -->
+    <div class="boxes">
+      <a href="src/Youtube-UI.html" class="button" data-text="Awesome">
+        <span class="actual-text">&nbsp;Youtube UI&nbsp;&nbsp;</span>
+          <span aria-hidden="true" class="hover-text">&nbsp;Youtube UI&nbsp;</span>
+      </a>
+    </div>
+
+    <!-- Buttons -->
+    <div class="boxes">
+      <a href="src/Box-Model-2.html" class="button" data-text="Awesome">
+        <span class="actual-text">&nbsp;Box Model 2&nbsp;&nbsp;</span>
+          <span aria-hidden="true" class="hover-text">&nbsp;Box Model 2&nbsp;</span>
+      </a>
+    </div>
+
+
+  </div>
 </body>
+
+</html>
