--- a/src/Box-Model-2.html
+++ b/src/Box-Model-2.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Box Model 2</title>
-    <link rel="stylesheet" href="/dist/output.css">
+    <link href="../dist/output.css" rel="stylesheet">
+    <link rel="stylesheet" href="input.css">
     <style>
         .f-c {
             border: 4px solid red !important;
