--- a/src/Youtube-UI.html
+++ b/src/Youtube-UI.html
@@ -84,7 +84,7 @@
         <span>Subscriptions</span>
       </div>
 
-      <hr>
+      <hr class="my-4">
 
       <div class="category py-4 px-6 flex items-center">
         <i class="material-icons mr-4">
