--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="dist/output.css" rel="stylesheet">
   <link rel="stylesheet" href="src/input.css">
-
+  <!-- GOOGLE ICONS -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- GOOGLE FONTS -->
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400&family=Kdam+Thmor+Pro&family=Roboto+Slab&display=swap"
     rel="stylesheet">
+  <!-- ANIMATE CND -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
   <style>
     body {
-      background-color: black !important;
+      background-color: rgb(105, 99, 99) !important;
       font-family: 'Kdam Thmor Pro', sans-serif !important;
     }
 
@@ -40,7 +44,7 @@
       letter-spacing: 3px;
       text-decoration: none;
       font-size: var(--fs-size);
-      font-family: "Arial";
+      /* font-family: "Arial"; */
       position: relative;
       text-transform: uppercase;
       color: transparent;
@@ -87,18 +91,26 @@
   <div class="container">
 
     <!-- Buttons -->
-    <div class="boxes">
+    <div class="boxes animate__animated animate__backInUp">
       <a href="src/Youtube-UI.html" class="button" data-text="Awesome">
         <span class="actual-text">&nbsp;Youtube UI&nbsp;&nbsp;</span>
-          <span aria-hidden="true" class="hover-text">&nbsp;Youtube UI&nbsp;</span>
+        <span aria-hidden="true" class="hover-text">&nbsp;Youtube UI&nbsp;</span>
       </a>
     </div>
 
     <!-- Buttons -->
-    <div class="boxes">
+    <div class="boxes animate__animated animate__bounceInDown">
       <a href="src/Box-Model-2.html" class="button" data-text="Awesome">
         <span class="actual-text">&nbsp;Box Model 2&nbsp;&nbsp;</span>
-          <span aria-hidden="true" class="hover-text">&nbsp;Box Model 2&nbsp;</span>
+        <span aria-hidden="true" class="hover-text">&nbsp;Box Model 2&nbsp;</span>
+      </a>
+    </div>
+
+    <!-- Buttons -->
+    <div class="boxes animate__animated animate__bounceInUp">
+      <a href="src/flexbox-gallery.html" class="button" data-text="Awesome">
+        <span class="actual-text">&nbsp;Flexbox Photo Gallery App &nbsp;&nbsp;</span>
+        <span aria-hidden="true" class="hover-text">&nbsp;Flexbox Photo Gallery App &nbsp;</span>
       </a>
     </div>
 
