--- a/src/Major-project.html
+++ b/src/Major-project.html
@@ -1,11 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Major Project</title>
+    <link rel="stylesheet" href="../dist/output.css">
+    <link rel="stylesheet" href="css/Major-project.css">
+    <link rel="stylesheet" href="input.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
+    <style>
+        body {
+            overflow-x: hidden;
+            scroll-behavior: smooth;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <main class="header">
+        <div class="header-content">
+
+            <!-- Navbar -->
+            <nav class="navbar p-4">
+                <img class="logo"
+                    src="https://www.free-css.com/assets/files/free-css-templates/preview/page259/aria/assets/images/logo.svg"
+                    alt="">
+                <div class="all-links">
+                    <ul class="all-links-ul">
+                        <li id="home"><a href="">HOME</a></li>
+                        <li id="intro"><a href="#intro">INTRO</a></li>
+                        <li id="services"><a href="#services">SERVICES</a></li>
+                        <li id="call-me"><a href="#call-me">CALL ME</a></li>
+                        <li id="projects"><a href="#projects">PROJECTS</a></li>
+                        <li id="about"><a href="#about" class="about-flex">ABOUT<i class="material-symbols-outlined">
+                                    arrow_drop_down
+                                </i></a></li>
+                        <li id="contact"><a href="#contact">CONTACT</a></li>
+                        <!-- Facebook Icon -->
+                        <div class="nav-2">
+                            <span class="fa-stack fa-stack-sm">
+                                <span class="hexagon"></span>
+                                <i class="fa-brands fa-facebook-f fa-stack-1x"></i>
+                            </span>
+                        </div>
+                        <!-- Twitter Icon -->
+                        <div class="nav-2">
+                            <span class="fa-stack fa-stack-sm">
+                                <span class="hexagon"></span>
+                                <i class="fa-brands fa-twitter fa-stack-1x"></i>
+                            </span>
+                        </div>
+                    </ul>
+                </div>
+            </nav>
+            <article class="m-auto flex justify-center items-center" style="width: 55vw; margin-top: 6.5rem;">
+                <div class="main-heading text-center">
+                    <h1 class="text-white mb-2">BUSINESS SOLUTIONS</h1>
+                    <p class="p-heading p-large">Aria is a top consultancy company specializing in business growth using
+                        online marketing and conversion
+                        optimization tactics</p>
+                    <a href="" class="btn-solid-lg">DISCOVER</a>
+                </div>
+            </article>
+        </div>
+    </main>
+    <!-- Cards Section -->
+    <section id="intro" class="basic-1">
+        <div class="container mx-auto px-4">
+            <div class="sub-container col-5">
+                <div class="section-title">INTRO</div>
+                <h2 class="section-h2">We Offer Some Of The Best Business Growth Services In Town</h2>
+                <p class="mb-4">Launching a new company or developing the market position of an existing one can be
+                    quite an overwhelming processs at times.</p>
+                <p class="mb-4"><em>"Our mission here at Aira is to get you through those tough moments relying on our
+                        team's expertise in starting and growing companies."</em></p>
+                <div class="testimonial-author">Louise Donovan - CEO</div>
+            </div>
+            <div class="col-7">
+                <div class="image-container">
+                    <img class="img-fluid" src="Major Project/intro-office-img-fluid.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Cards-1 -->
+    <section id="cards-1" class="basic-1">
+        <div class="container mx-auto px-4 pb-8">
+            <div class="cards-2">
+                <span class="fa-stack fa-stack-1x">
+                    <span class="hexagon"></span>
+                    <i class="fa-solid fa-binoculars fa-stack-1x"></i>
+                </span>
+                <h4 class="section-h2">Environment Analysis</h4>
+                <p class="mb-4">The starting point of any success story is knowing your current position in the business
+                    environment</p>
+            </div>
+            <div class="cards-2">
+                <span class="fa-stack fa-stack-1x">
+                    <span class="hexagon"></span>
+                    <i class="fa-solid fa-rectangle-list fa-stack-1x"></i>
+                </span>
+                <h4 class="section-h2">Development Planning</h4>
+                <p class="mb-4">After completing the environmental analysis the next stage is to design and plan your
+                    development strategy</p>
+            </div>
+            <div class="cards-2">
+                <span class="fa-stack fa-stack-1x">
+                    <span class="hexagon"></span>
+                    <i class="fa-solid fa-chart-pie fa-stack-1x"></i>
+                </span>
+                <h4 class="section-h2">Execution & Evaluation</h4>
+                <p class="mb-4">In this phase you will focus on executing the actions plan and evaluating the results
+                    after each marketing campaign</p>
+            </div>
+        </div>
+    </section>
+    <script src="https://kit.fontawesome.com/a2b83d2bef.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
