--- a/src/Major-project.html
+++ b/src/Major-project.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="input.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
+    <!-- Animate CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <style>
         body {
             overflow-x: hidden;
@@ -69,7 +72,7 @@
     <!-- Cards Section -->
     <section id="intro" class="basic-1">
         <div class="container mx-auto px-4">
-            <div class="sub-container col-5">
+            <div class="animate__animated animate__fadeInLeft sub-container col-5">
                 <div class="section-title">INTRO</div>
                 <h2 class="section-h2">We Offer Some Of The Best Business Growth Services In Town</h2>
                 <p class="mb-4">Launching a new company or developing the market position of an existing one can be
@@ -78,7 +81,7 @@
                         team's expertise in starting and growing companies."</em></p>
                 <div class="testimonial-author">Louise Donovan - CEO</div>
             </div>
-            <div class="col-7">
+            <div class="animate__animated animate__fadeInRight col-7">
                 <div class="image-container">
                     <img class="img-fluid" src="Major Project/intro-office-img-fluid.jpg" alt="">
                 </div>
@@ -87,7 +90,7 @@
     </section>
 
     <!-- Cards-1 -->
-    <section id="cards-1" class="basic-1">
+    <section id="cards-1" class="animate__animated animate__fadeInUp basic-1">
         <div class="container mx-auto px-4 pb-8">
             <div class="cards-2">
                 <span class="fa-stack fa-stack-1x">
@@ -118,7 +121,22 @@
             </div>
         </div>
     </section>
+
+    <section class="footer">
+        <img src="Major Project/header-background.jpg" alt="">
+    </section>
+
+
+
+
+    <!-- All scripts -->
+
+    <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/a2b83d2bef.js" crossorigin="anonymous"></script>
+    <!-- AOS -->
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
