--- a/src/Major-project.html
+++ b/src/Major-project.html
@@ -70,7 +70,7 @@
         </div>
     </main>
     <!-- Cards Section -->
-    <section id="intro" class="basic-1">
+    <section id="intro" class="intro-section basic-1">
         <div class="container mx-auto px-4">
             <div class="animate__animated animate__fadeInLeft sub-container col-5">
                 <div class="section-title">INTRO</div>
@@ -122,8 +122,111 @@
         </div>
     </section>
 
-    <section class="footer">
-        <img src="Major Project/header-background.jpg" alt="">
+    <section id="#services" class="services-section basic-1">
+        <div class="animate__animated animate__fadeInUp container px-4 mx-auto">
+            <div class="basic-2">
+                <div class="section-title">INTRO</div>
+                <h2 class="section-h2">Choose The Service Package
+                    That Suits Your Needs</h2>
+            </div>
+            <!-- <div"> -->
+            <div class="basic-2 price-cards">
+                <!-- price cards 1fr -->
+                <div class="single-template inline-block" id="price-card-1">
+                    <div class="price-cards-image">
+                        <img class="card-img-fluid" src="../src/Major Project/price-card-image-1.jpg" alt="">
+                    </div>
+                    <div class="price-cards-body">
+                        <h3 class="section-h2">Off The Ground Off The Ground</h3>
+                        <p class="first-p">Perfect for fresh ideas or young startups, this package will help get the
+                            business off
+                            the
+                            ground
+                        </p>
+                        <ul class="single-template-ul">
+                            <li class="single-template-ul-li">
+                                <i class="material-symbols-outlined">
+                                    square
+                                </i>
+                                <span>Environment and competition</span>
+                            </li>
+                            <li class="single-template-ul-li">
+                                <i class="material-symbols-outlined">
+                                    square
+                                </i>
+                                <span>Designing the marketing plan</span>
+                            </li>
+                        </ul>
+                        <p class="second-p">Starting at <span style="color: #14bf98;">$199</span>
+                        </p>
+                    </div>
+                    <div class="price-button">
+                        <a href="" class="btn-solid-lg">Details</a>
+                    </div>
+                </div>
+                <!-- price cards 1fr -->
+                <div class="single-template inline-block" id="price-card-1">
+                    <div class="price-cards-image">
+                        <img class="card-img-fluid" src="../src/Major Project/price-card-image-2.jpg" alt="">
+                    </div>
+                    <div class="price-cards-body">
+                        <h3 class="section-h2">Accelerated Growth</h3>
+                        <p class="first-p">Use this service pack to give your company the necessary impulse to become an
+                            industry leader</p>
+                        <ul class="single-template-ul">
+                            <li class="single-template-ul-li">
+                                <i class="material-symbols-outlined">
+                                    square
+                                </i>
+                                <span>Business strategy planning</span>
+                            </li>
+                            <li class="single-template-ul-li">
+                                <i class="material-symbols-outlined">
+                                    square
+                                </i>
+                                <span>Taking the planned actions</span>
+                            </li>
+                        </ul>
+                        <p class="second-p">Starting at <span style="color: #14bf98;">$299</span>
+                        </p>
+                    </div>
+                    <div class="price-button">
+                        <a href="" class="btn-solid-lg">Details</a>
+                    </div>
+                </div>
+                <!-- price cards 1fr -->
+                <div class="single-template inline-block" id="price-card-1">
+                    <div class="price-cards-image">
+                        <img class="card-img-fluid" src="../src/Major Project/price-card-image-3.jpg" alt="">
+                    </div>
+                    <div class="price-cards-body">
+                        <h3 class="section-h2">Market Domination</h3>
+                        <p class="first-p">You already are a reference point in your industry now you need to learn
+                            about acquisitions</p>
+                        <ul class="single-template-ul">
+                            <li class="single-template-ul-li">
+                                <i class="material-symbols-outlined">
+                                    square
+                                </i>
+                                <span>Maintaining the leader status</span>
+                            </li>
+                            <li class="single-template-ul-li">
+                                <i class="material-symbols-outlined">
+                                    square
+                                </i>
+                                <span>Acquisitions the right way</span>
+                            </li>
+                        </ul>
+                        <p class="second-p">Starting at <span style="color: #14bf98;">$299</span>
+                        </p>
+                    </div>
+                    <div class="price-button">
+                        <a href="" class="btn-solid-lg">Details</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
     </section>
 
 
