--- a/src/Major-project.html
+++ b/src/Major-project.html
@@ -58,15 +58,21 @@
                     </ul>
                 </div>
             </nav>
-            <article class="m-auto flex justify-center items-center" style="width: 55vw; margin-top: 6.5rem;">
-                <div class="main-heading text-center">
-                    <h1 class="text-white mb-2">BUSINESS SOLUTIONS</h1>
-                    <p class="p-heading p-large">Aria is a top consultancy company specializing in business growth using
-                        online marketing and conversion
-                        optimization tactics</p>
-                    <a href="" class="btn-solid-lg">DISCOVER</a>
-                </div>
-            </article>
+
+            <div class="container">
+
+                <!-- Main Section content -->
+                <article class="front-main-content mx-auto">
+                    <div class="main-heading text-center">
+                        <h1 class="text-white mb-2">BUSINESS SOLUTIONS</h1>
+                        <p class="p-heading p-large" style="max-width: 40em;">Aria is a top consultancy company specializing in business growth
+                            using
+                            online marketing and conversion
+                            optimization tactics</p>
+                        <a href="" class="btn-solid-lg">DISCOVER</a>
+                    </div>
+                </article>
+            </div>
         </div>
     </main>
     <!-- Cards Section -->
@@ -121,13 +127,16 @@
             </div>
         </div>
     </section>
-
+    <!-- Services Section -->
+    <!-- Part 1 -->
     <section id="#services" class="services-section basic-1">
         <div class="animate__animated animate__fadeInUp container px-4 mx-auto">
             <div class="basic-2">
                 <div class="section-title">INTRO</div>
                 <h2 class="section-h2">Choose The Service Package
-                    That Suits Your Needs</h2>
+                    <br>
+                    That Suits Your Needs
+                </h2>
             </div>
             <!-- <div"> -->
             <div class="basic-2 price-cards">
@@ -229,6 +238,51 @@
         </div>
     </section>
 
+    <!-- Part 2 -->
+    <section class="accordian">
+        <div class="area-1"></div>
+        <div class="area-2">
+            <div class="accordion-container">
+                <h2 class="section-h2">Accelerate Business Growth To Improve Revenue Numbers</h2>
+                <div class="item">
+                    <div id="heading-one">
+                        <span class="circle-numbering">1</span>
+                        <span class="item-title">How Can Aria Help Your Business</span>
+                    </div>
+                </div>
+                <div class="item">
+                    <div id="heading-second">
+                        <span class="circle-numbering">2</span>
+                        <span class="item-title">Great Strategic Business Planning</span>
+                    </div>
+                </div>
+                <div class="item">
+                    <div id="heading-third">
+                        <span class="circle-numbering">3</span>
+                        <span class="item-title">Online Marketing Campaigns</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Part 2 -->
+    <section class="accordian">
+        <div class="area-3">
+            <div class="accordion-sections">
+                <h4 class="">Business Services For Companies</h4>
+                <p class="">
+                    Aria provides the most innovative and customized business services in the industry. Our Services
+                    section shows how flexible we are for all types of budgets.
+                </p>
+            </div>
+            <div class="progress-container">
+                <label class="progress-label" for="file">Business Development 32%</label>
+                <br>
+                <progress id="file" value="32" max="100"> 32% </progress>
+            </div>
+        </div>
+        <div class="area-4"></div>
+    </section>
 
 
 
