--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     }
 
     .boxes {
+      max-width: 90%;
       border: 0.3em solid yellow;
       border-radius: 6px !important;
       margin: 2em !important;
@@ -93,24 +94,40 @@
     <!-- Buttons -->
     <div class="boxes animate__animated animate__backInUp">
       <a href="src/Youtube-UI.html" class="button" data-text="Awesome">
-        <span class="actual-text">&nbsp;Youtube UI&nbsp;&nbsp;</span>
-        <span aria-hidden="true" class="hover-text">&nbsp;Youtube UI&nbsp;</span>
+        <span class="actual-text">&nbsp;Youtube UI&nbsp;&nbsp;&nbsp;</span>
+        <span aria-hidden="true" class="hover-text">&nbsp;Youtube UI&nbsp;&nbsp;</span>
+      </a>
+    </div>
+
+    <!-- Buttons -->
+    <div class="boxes animate__animated animate__backInUp">
+      <a href="src/Major-project.html" class="button" data-text="Awesome">
+        <span class="actual-text">&nbsp;Major Project&nbsp;&nbsp;&nbsp;</span>
+        <span aria-hidden="true" class="hover-text">&nbsp;Major Project&nbsp;&nbsp;</span>
+      </a>
+    </div>
+
+    <!-- Buttons -->
+    <div class="boxes animate__animated animate__bounceInDown">
+      <a href="src/Media_Queries.html" class="button" data-text="Awesome">
+        <span class="actual-text">&nbsp;Media Queries&nbsp;&nbsp;&nbsp;</span>
+        <span aria-hidden="true" class="hover-text">&nbsp;Media Queries&nbsp;&nbsp;</span>
       </a>
     </div>
 
     <!-- Buttons -->
     <div class="boxes animate__animated animate__bounceInDown">
       <a href="src/Box-Model-2.html" class="button" data-text="Awesome">
-        <span class="actual-text">&nbsp;Box Model 2&nbsp;&nbsp;</span>
-        <span aria-hidden="true" class="hover-text">&nbsp;Box Model 2&nbsp;</span>
+        <span class="actual-text">&nbsp;Box Model 2&nbsp;&nbsp;&nbsp;</span>
+        <span aria-hidden="true" class="hover-text">&nbsp;Box Model 2&nbsp;&nbsp;</span>
       </a>
     </div>
 
     <!-- Buttons -->
     <div class="boxes animate__animated animate__bounceInUp">
       <a href="src/flexbox-gallery.html" class="button" data-text="Awesome">
-        <span class="actual-text">&nbsp;Flexbox Photo Gallery App &nbsp;&nbsp;</span>
-        <span aria-hidden="true" class="hover-text">&nbsp;Flexbox Photo Gallery App &nbsp;</span>
+        <span class="actual-text">&nbsp;Flexbox Photo Gallery App &nbsp;&nbsp;&nbsp;</span>
+        <span aria-hidden="true" class="hover-text">&nbsp;Flexbox Photo Gallery App &nbsp;&nbsp;</span>
       </a>
     </div>
 
