--- a/src/Major-project.html
+++ b/src/Major-project.html
@@ -65,7 +65,7 @@
                 <article class="front-main-content mx-auto">
                     <div class="main-heading text-center">
                         <h1 class="text-white mb-2">BUSINESS SOLUTIONS</h1>
-                        <p class="p-heading p-large" style="max-width: 40em;">Aria is a top consultancy company specializing in business growth
+                        <p class="p-heading p-large">Aria is a top consultancy company specializing in business growth
                             using
                             online marketing and conversion
                             optimization tactics</p>
@@ -241,7 +241,7 @@
     <!-- Part 2 -->
     <section class="accordian">
         <div class="area-1"></div>
-        <div class="area-2">
+        <!-- <div class="area-2">
             <div class="accordion-container">
                 <h2 class="section-h2">Accelerate Business Growth To Improve Revenue Numbers</h2>
                 <div class="item">
@@ -263,11 +263,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
     <!-- Part 2 -->
     <section class="accordian">
-        <div class="area-3">
+        <!-- <div class="area-3">
             <div class="accordion-sections">
                 <h4 class="">Business Services For Companies</h4>
                 <p class="">
@@ -280,7 +280,7 @@
                 <br>
                 <progress id="file" value="32" max="100"> 32% </progress>
             </div>
-        </div>
+        </div> -->
         <div class="area-4"></div>
     </section>
 
