--- a/index.html
+++ b/index.html
@@ -131,6 +131,14 @@
       </a>
     </div>
 
+    <!-- Buttons -->
+    <div class="boxes animate__animated animate__bounceInUp"> 
+      <a href="src/Animations.html" class="button" data-text="Awesome">
+        <span class="actual-text">&nbsp;Animations &nbsp;&nbsp;&nbsp;</span>
+        <span aria-hidden="true" class="hover-text">&nbsp;Animations &nbsp;&nbsp;</span>
+      </a>
+    </div>
+
 
   </div>
 </body>
