--- a/src/Major-project.html
+++ b/src/Major-project.html
@@ -82,7 +82,8 @@
                             using
                             online marketing and conversion
                             optimization tactics</p>
-                        <a href="" class="btn-solid-lg">DISCOVER</a>
+                        <!-- <button class="my-button">DISCOVER</button> -->
+                        <button class="my-button">DISCOVER</button>
                     </div>
                 </article>
             </div>
@@ -183,7 +184,7 @@
                         </p>
                     </div>
                     <div class="price-button">
-                        <a href="" class="btn-solid-lg">Details</a>
+                        <button class="my-button">Details</button>
                     </div>
                 </div>
                 <!-- price cards 1fr -->
@@ -213,7 +214,7 @@
                         </p>
                     </div>
                     <div class="price-button">
-                        <a href="" class="btn-solid-lg">Details</a>
+                        <button class="my-button">Details</button>
                     </div>
                 </div>
                 <!-- price cards 1fr -->
@@ -243,7 +244,7 @@
                         </p>
                     </div>
                     <div class="price-button">
-                        <a href="" class="btn-solid-lg">Details</a>
+                        <button class="my-button">Details</button>
                     </div>
                 </div>
             </div>
