--- a/src/Major-project.html
+++ b/src/Major-project.html
@@ -561,7 +561,145 @@
         </div>
     </div>
 
+    <!-- Consultants -->
+
+
     <!-- All scripts -->
+    <section class="testimonials consultants">
+        <div class="container text-gray-600 body-font py-24 text-center">
+            <!-- heading container -->
+            <div class="h-auto px-5">
+                <h2 class="section-h2">Our Team Of Consultants</h2>
+                <p class="first-p">We're only as strong and as knowledgeable as our team. So here are the men and women
+                    which help customers meet goals and grow companies</p>
+            </div>
+
+            <!-- consultant members child div -->
+            <div class="member-group-parent">
+                <div class="members-group">
+                    <div class="member-image">
+                        <img src="../src/images/member-1.png" alt="">
+                    </div>
+                    <p class="member-name">John Whitelong</p>
+                    <h2 class="member-designation">General Manager</h2>
+                    <div class="social-links">
+                        <!-- Facebook Icon -->
+                        <span class="fa-stack fa-stack-sm">
+                            <span class="hexagon"></span>
+                            <i class="fa-brands fa-facebook-f fa-stack-1x"></i>
+                        </span>
+                        <!-- Twitter Icon -->
+                        <span class="fa-stack fa-stack-sm">
+                            <span class="hexagon"></span>
+                            <i class="fa-brands fa-twitter fa-stack-1x"></i>
+                        </span>
+                    </div>
+                </div>
+
+                <!-- consultant members child div -->
+                <div class="members-group">
+                    <div class="member-image">
+                        <img src="../src/images/member-2.png" alt="">
+                    </div>
+                    <p class="member-name">John Whitelong</p>
+                    <h2 class="member-designation">General Manager</h2>
+                    <div class="social-links">
+                        <!-- Facebook Icon -->
+                        <span class="fa-stack fa-stack-sm">
+                            <span class="hexagon"></span>
+                            <i class="fa-brands fa-facebook-f fa-stack-1x"></i>
+                        </span>
+                        <!-- Twitter Icon -->
+                        <span class="fa-stack fa-stack-sm">
+                            <span class="hexagon"></span>
+                            <i class="fa-brands fa-twitter fa-stack-1x"></i>
+                        </span>
+                    </div>
+                </div>
+
+                <!-- consultant members child div -->
+                <div class="members-group">
+                    <div class="member-image">
+                        <img src="../src/images/member-3.png" alt="">
+                    </div>
+                    <p class="member-name">John Whitelong</p>
+                    <h2 class="member-designation">General Manager</h2>
+                    <div class="social-links">
+                        <!-- Facebook Icon -->
+                        <span class="fa-stack fa-stack-sm">
+                            <span class="hexagon"></span>
+                            <i class="fa-brands fa-facebook-f fa-stack-1x"></i>
+                        </span>
+                        <!-- Twitter Icon -->
+                        <span class="fa-stack fa-stack-sm">
+                            <span class="hexagon"></span>
+                            <i class="fa-brands fa-twitter fa-stack-1x"></i>
+                        </span>
+                    </div>
+                </div>
+
+                <!-- consultant members child div -->
+                <div class="members-group">
+                    <div class="member-image">
+                        <img src="../src/images/member-4.png" alt="">
+                    </div>
+                    <p class="member-name">John Whitelong</p>
+                    <h2 class="member-designation">General Manager</h2>
+                    <div class="social-links">
+                        <!-- Facebook Icon -->
+                        <span class="fa-stack fa-stack-sm">
+                            <span class="hexagon"></span>
+                            <i class="fa-brands fa-facebook-f fa-stack-1x"></i>
+                        </span>
+                        <!-- Twitter Icon -->
+                        <span class="fa-stack fa-stack-sm">
+                            <span class="hexagon"></span>
+                            <i class="fa-brands fa-twitter fa-stack-1x"></i>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ABOUT Section -->
+    <section id="about" class="about-section">
+        <div class="container">
+            <div class="about-divider">
+                <!-- image right side -->
+                <div class="image-box w-full overflow-hidden mt-6 sm:mt-0">
+                    <img class="" src="Major Project/header-background.jpg" alt="stats">
+                </div>
+                <!-- text content left side -->
+                <div class="content-box">
+                    <div class="item-1 w-full sm:p-4 px-4 mb-6">
+                        <h1 class="mb-2 ">Moon hashtag pop-up try-hard offal truffaut</h1>
+                        <div class="leading-relaxed">Pour-over craft beer pug drinking vinegar live-edge gastropub,
+                            keytar neutra sustainable fingerstache kickstarter.</div>
+                    </div>
+                    <div class="item-2-parent">
+                        <div class="item-2 p-4 sm:w-1/2 lg:w-1/4 w-1/2">
+                            <h2 class="about-h2">2.7K</h2>
+                            <span class="leading-relaxed">Users</span>
+                        </div>
+                        <div class="item-2 p-4 sm:w-1/2 lg:w-1/4 w-1/2">
+                            <h2 class="about-h2">1.8K</h2>
+                            <span class="leading-relaxed">Subscribes</span>
+                        </div>
+                        <div class="item-2 p-4 sm:w-1/2 lg:w-1/4 w-1/2">
+                            <h2 class="about-h2">35</h2>
+                            <span class="leading-relaxed">Downloads</span>
+                        </div>
+                        <div class="item-2 p-4 sm:w-1/2 lg:w-1/4 w-1/2">
+                            <h2 class="about-h2">4</h2>
+                            <span class="leading-relaxed">Products</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/a2b83d2bef.js" crossorigin="anonymous"></script>
